k8s/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "demo-app"
  namespace: "workshop"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: "demo-app"
    spec:
      containers:
      - image: dukecyber/go-example
        imagePullPolicy: Always
        name: "demo"
        ports:
        - containerPort: 3000
