k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "demo-app-svc"
  namespace: "workshop"
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
  selector:
    app: "demo-app"
