k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "demo-app-ingress"
  namespace: "workshop"
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: demo-app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "demo-app-svc"
              servicePort: 80
